--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="action_pan_right">Demo pan right</string>
     <string name="action_pan_up">Demo pan up</string>
     <string name="action_pan_down">Demo pan down</string>
+    <string name="reset_button">Reset</string>
 </resources>
